--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="css/style.css">
 
 
-    <title>React App</title>
+    <title>Mircea's blog</title>
   </head>
   <body>
     <noscript>
